[project]
name = "medtriage-env"
version = "1.0.0"
description = "Emergency department triage environment where an AI agent acts as an ED nurse — assigning ESI priority levels, ordering diagnostic tests, managing bed allocation, consulting specialists, and handling patient deterioration across a simulated shift."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Rohan"},
]
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "pydantic==2.9.2",
    "requests==2.32.3",
    "openai>=1.0.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
